--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
                         <img src="image/ch01.svg" alt="客製化圖示">
                         <div class="cus-txt">
                             <h5>活動主</h5>
-                            <p>用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
+                            <p>用戶數位足跡掌握在手<br>精準取得客戶輪廓，提供分析</p>
                         </div>
                     </li>
                     <li class="cus-item">
                         <img src="image/ch02.svg" alt="客製化圖示">
                         <div class="cus-txt">
                             <h5>創作者</h5>
-                            <p class="creation-txt">自由設計互動腳本 輕鬆整合各項數據</p>
+                            <p class="creation-txt">自由設計互動腳本<br>輕鬆整合各項數據</p>
                         </div>
                     </li>
                     <li class="cus-item">
                         <img src="image/ch03.svg" alt="客製化圖示">
                         <div class="cus-txt">
                             <h5>企業品牌</h5>
-                            <p>多元資料整合，做出服務差異化 幫助企業加速決策</p>
+                            <p>多元資料整合，做出服務差異化幫助企業加速決策</p>
                         </div>
                     </li>
                     <li class="cus-item">
@@ -84,28 +84,28 @@
                 <ul class="feature-type">
                     <li class="feature-item transfer">
                         <div class="rad-img">
-                            <img src="/image/icon01.svg" alt="無敵轉換術">
+                            <img src="image/icon01.svg" alt="無敵轉換術">
                         </div>
                         <h5>無敵轉換術</h5>
                         <p>精準掌握客群來源 分析用戶轉化流程</p>
                     </li>
                     <li class="feature-item chat_bot">
                         <div class="rad-img">
-                            <img src="/image/icon02.svg" alt="聊天機器人">
+                            <img src="image/icon02.svg" alt="聊天機器人">
                         </div>
                         <h5>聊天機器人</h5>
                         <p>66款聊天機器人模組 自由設計聊天流程</p>
                     </li>
                     <li class="feature-item integrate">
                         <div class="rad-img">
-                            <img src="/image/icon03.svg" alt="一站式訊息中心">
+                            <img src="image/icon03.svg" alt="一站式訊息中心">
                         </div>
                         <h5>一站式訊息中心</h5>
                         <p>整合Messenger、LINE和IG三大平台訊息</p>
                     </li>
                     <li class="feature-item send_all">
                         <div class="rad-img">
-                            <img src="/image/icon04.svg" alt="群發訊息">
+                            <img src="image/icon04.svg" alt="群發訊息">
                         </div>
                         <h5>群發訊息</h5>
                         <p>自由選定特定受眾 精準推送群發訊息</p>
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="eval_item">
+                    <li class="eval_item noon">
                         <img src="image/user03.jpg" alt="油土伯照片">
                         <p>經營了好久的IG，一直無法提升粉絲數，和團隊合作後，才知道可以用聊天機器人玩這麼豐富的行銷活動！太讚拉～</p>
                         <span class="company">油土伯</span>
@@ -166,6 +166,15 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="footer-plan">
+            <h2>\ 美好用戶體驗，從對話開始 /</h2>
+            <a href="#" class="btn-price">方案費用</a>
+        </div>
+        <div class="footer">
+            <div class="content">  
+                <p>© 2022 chatTalker. All Rights Reserved.</p>
             </div>
         </div>
     </div>
