依建議方式修改

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/all.css">
     
 </head>
@@ -21,7 +22,7 @@
             <div class="banner">
                 <div class="banner-txt">
                     <h2>ChatTalker 最全面的聊天機器人</h2>
-                    <h3>你愛我像誰？ <br>扮演什麼角色我都會</h3>
+                    <p class="title">你愛我像誰？ <br>扮演什麼角色我都會</p>
                     <p>Facebook、Instagram、LINE 聊天機器人解決方案</p>
                 </div>
                 <img src="image/home.svg" alt="banner">
@@ -112,13 +113,13 @@
                     </li>
                 </ul>
                 <div class="feature-content">
-                    <h6>快速了解客戶輪廓<br>建立品牌流量池</h6>
+                    <h4>快速了解客戶輪廓<br>建立品牌流量池</h4>
                     <p>深入用戶日常，成為用戶貼身好友<br>精準傳遞品牌資訊，打造個人化專屬服務<br>不知不覺深入用戶生活，成為用戶貼心的好朋朋:D</p>
                     <a href="#" class="btn-price">方案費用</a>
                 </div>  
             </div>
             <div class="eval">
-                <h2>好評如潮</h2>
+                <h4>好評如潮</h4>
                 <ul class="eval_new">
                     <li class="eval_item">
                         <img src="image/user01.jpg" alt="Lina 執行長照片">
@@ -169,7 +170,7 @@
             </div>
         </div>
         <div class="footer-plan">
-            <h2>\ 美好用戶體驗，從對話開始 /</h2>
+            <h4>\ 美好用戶體驗，從對話開始 /</h4>
             <a href="#" class="btn-price">方案費用</a>
         </div>
         <div class="footer">
